# Decision_Intelligence_Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/routers/: llm.py  ml.py  rag.py
backend/app/schemas/: models.py
backend/app/services/: chroma_service.py  feature_extraction.py  llm_service.py  ml_service.py
backend/app/utils/: config.py  logger.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/services/: api.js
