[project]
name = "decision-intelligence-assistant"
version = "1.0.0"
description = "RAG + ML + LLM decision support system"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "chromadb==0.4.21",
    "openai==1.3.0",
    "scikit-learn==1.3.2",
]

[tool.uv]
# uv is used for Python environment and dependency management
# Install uv from: https://github.com/astral-sh/uv#installation
